Fix for overflow bug in EasyMDE

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1317,6 +1317,9 @@ select {
 .overflow-hidden {
   overflow: hidden;
 }
+.overflow-x-auto {
+  overflow-x: auto;
+}
 .overflow-y-auto {
   overflow-y: auto;
 }
